# hugalloc

./: BENCH.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release-plz.yml
benches/: alloc_bench.rs  pageout_bench.rs
docs/: issue-1-findings.md
examples/: disk_usage.rs
src/: lib.rs
tests/: advise.rs  advise_typed.rs  basic.rs  buffer.rs  buffer_panics.rs  builder.rs  concurrent.rs  disable.rs
