[package]
name = "hugalloc"
version = "0.1.0"
edition = "2024"
authors = ["Moritz Hoffmann <antiguru@gmail.com>"]
description = "Transparent-huge-page large-object allocator with cooperative residency control"
license = "MIT OR Apache-2.0"
repository = "https://github.com/antiguru/hugalloc"
rust-version = "1.85"

[dependencies]
crossbeam-deque = "0.8.5"
libc = "0.2"
page_size = "0.6.0"
thiserror = "2.0"

[dev-dependencies]
hdrhistogram = "7"

[[bench]]
name = "alloc_bench"
harness = false

[profile.release]
debug = 2
codegen-units = 1
lto = true
